# codeurv2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TESTING.md  bm25.db  docker-compose.optimized.yml  docker-compose.yml  init_tables.py  poetry.toml  pyproject.toml  pytest.ini  reset_test_db.py  start_services.sh  summary.txt
.github/workflows/: ci.yml
apps/: core_contracts_grpc.py  core_contracts_pb2.py  core_contracts_pb2_grpc.py  git_adapter_pb2.py  git_adapter_pb2_grpc.py  rag_pb2.py  rag_pb2_grpc.py  symbol_pb2.py  symbol_pb2_grpc.py
apps/ci_runner/: Dockerfile  Dockerfile.optimized  run.py
apps/git_adapter/: Dockerfile  Dockerfile.optimized  grpc_server.py  server.py  startup.py
apps/git_cache/: Dockerfile  fetch.sh
apps/orchestrator/: Dockerfile  Dockerfile.optimized  __main__.py  main.py  state_machine.py  topics.py
apps/rag_service/: Dockerfile  Dockerfile.optimized  api.py  bm25.py  embedding.py  grpc_server.py  ingest.py  main.py  vector.py
clients/: __init__.py  git_client.py  srm_client.py
docs/: BUILD_OPTIMIZATION.md  Build_opt.txt
plans/: master.txt  phase0.txt  phase1.5.txt  phase1.txt  phase10.txt  phase2.5.txt  phase2.txt  phase3.5.txt  phase3.txt  phase4.5.txt  phase4.txt  phase5.txt  phase6.5.txt  phase6.txt  phase7.txt  phase8.txt  phase9.5.txt  phase9.txt
proto/: core_contracts.proto  git_adapter.proto  rag.proto  symbol.proto
scripts/: build-optimized.sh  dev_start.sh  mock_change_request.py  optimize_dockerfiles.py  setup_test_env.sh  stop_test_env.sh
test-docker-build/: Dockerfile
(+47 files in other folders)
